@@ -260,7 +260,7 @@ class CaseAccessServiceTest {
                 .organisationId(orgId)
                 .caseRole(caseRole.formattedName())
                 .build())
-            .collect(Collectors.toList());
+            .toList();
 
         return AddCaseAssignedUserRolesRequest.builder()
             .caseAssignedUserRoles(caseAssignedRoles)
